Update build script Update pkg ref to proj ref for test project

--- a/src/SS.NuGet.Publish.Test/SS.NuGet.Publish.Test.csproj
+++ b/src/SS.NuGet.Publish.Test/SS.NuGet.Publish.Test.csproj
@@ -42,7 +42,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SS.NuGet.Publish" Version="1.0.1" />
+    <ProjectReference Include="..\SS.NuGet.Publish\SS.NuGet.Publish.csproj" />
   </ItemGroup>
 
 </Project>
