--- a/src/SS.NuGet.Publish.VisualStudio/SS.NuGet.Publish.VisualStudio.csproj
+++ b/src/SS.NuGet.Publish.VisualStudio/SS.NuGet.Publish.VisualStudio.csproj
@@ -70,6 +70,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.AppDesigner">
+      <Version>15.0.6142705</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VSSDK.BuildTools">
+      <Version>16.1.3133</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
