Add SS.NuGet.Publish.VisualStudio.exe as tool package

--- a/src/SS.NuGet.Publish.VisualStudio/SS.NuGet.Publish.VisualStudio.csproj
+++ b/src/SS.NuGet.Publish.VisualStudio/SS.NuGet.Publish.VisualStudio.csproj
@@ -80,4 +80,7 @@
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /y "$(TargetPath)" "$(SolutionDir)SS.NuGet.Publish\tools\"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
