--- a/src/SS.NuGet.Publish.VisualStudio/SS.NuGet.Publish.VisualStudio.csproj
+++ b/src/SS.NuGet.Publish.VisualStudio/SS.NuGet.Publish.VisualStudio.csproj
@@ -15,6 +15,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <RuntimeIdentifier>win</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
