--- a/src/SS.NuGet.Publish/SS.NuGet.Publish.csproj
+++ b/src/SS.NuGet.Publish/SS.NuGet.Publish.csproj
@@ -6,7 +6,7 @@
     <AssemblyVersion>1.0.1904.88</AssemblyVersion>
     <FileVersion>1.0.1904.88</FileVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.0.2</Version>
+    <Version>1.0.3-beta-02</Version>
     <Authors>Simpler Software</Authors>
     <Company>Simpler Software</Company>
     <Product>NuGet Publish MSBuild target</Product>
@@ -16,6 +16,7 @@
     <PackageIconUrl>https://raw.githubusercontent.com/NuGet/Media/master/Images/MainLogo/256x256/nuget_256.png</PackageIconUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <developmentDependency>true</developmentDependency>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -64,6 +65,13 @@
       <PackagePath>tools\</PackagePath>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
  
   <PropertyGroup>
