--- a/src/SS.NuGet.Publish/SS.NuGet.Publish.targets
+++ b/src/SS.NuGet.Publish/SS.NuGet.Publish.targets
@@ -1,14 +1,21 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <CfgPropertyPagesGuidsAddCSharp>{AA790F50-5208-41F5-89B2-D3733E12BE1D}</CfgPropertyPagesGuidsAddCSharp>
-    <NuGetPublishVersion Condition="'$(NuGetPublishVersion)' == ''">5.4.0</NuGetPublishVersion>
-    <NuGetPublishPath Condition="'$(NuGetPublishPath)' == ''">$(UserProfile)\.nuget\$(NuGetPublishVersion)\</NuGetPublishPath>
-    <NuGetPublishCmd Condition="'$(NuGetPublishType)' != 'remote'">add</NuGetPublishCmd>
-    <NuGetPublishCmd Condition="'$(NuGetPublishType)' == 'remote'">push</NuGetPublishCmd>
-  </PropertyGroup>
-  <Target Name="PublishPack" AfterTargets="Pack">
-    <DownloadFile Condition="!Exists('$(NuGetPublishPath)nuget.exe') AND '$(NuGetPublishLocation)' != ''" SourceUrl="https://dist.nuget.org/win-x86-commandline/v$(NuGetPublishVersion)/nuget.exe" DestinationFolder="$(NuGetPublishPath)" />
-    <Exec Command="&quot;$(NuGetPublishPath)nuget.exe&quot; $(NuGetPublishCmd) &quot;$(PackageOutputAbsolutePath)$(PackageId).$(PackageVersion).nupkg&quot; -Source &quot;$(NuGetPublishLocation.TrimEnd('\'))&quot;" Condition="'$(NuGetPublishLocation)' != ''" />
-    <Warning Text="Skipping NuGet publish, NuGetPublishLocation is not set in project file." Condition="'$(NuGetPublishLocation)' == ''" />
-  </Target>
+	<PropertyGroup>
+		<CfgPropertyPagesGuidsAddCSharp>{AA790F50-5208-41F5-89B2-D3733E12BE1D}</CfgPropertyPagesGuidsAddCSharp>
+		<NuGetPublishVersion Condition="'$(NuGetPublishVersion)' == ''">6.8.0</NuGetPublishVersion>
+		<NuGetPublishPath Condition="'$(NuGetPublishPath)' == ''">$(UserProfile)\.nuget\$(NuGetPublishVersion)\</NuGetPublishPath>
+
+		<NuGetPublishCmd Condition="'$(NuGetPublishType)' == '' AND '$(NuGetPublishLocation.SubString(0, 4))' != 'http'">add</NuGetPublishCmd>
+		<NuGetPublishCmd Condition="'$(NuGetPublishType)' == '' AND '$(NuGetPublishLocation.SubString(0, 4))' == 'http'">push</NuGetPublishCmd>
+		<NuGetPublishCmd Condition="'$(NuGetPublishType)' != '' AND '$(NuGetPublishType)' != 'remote'">add</NuGetPublishCmd>
+		<NuGetPublishCmd Condition="'$(NuGetPublishType)' != '' AND '$(NuGetPublishType)' == 'remote'">push</NuGetPublishCmd>
+
+		<NuGetPublishSkipDuplicate Condition="'$(NuGetPublishCmd)' == 'push' AND '$(NuGetPublishSkipDuplicate)' == 'true'">-SkipDuplicate</NuGetPublishSkipDuplicate>
+		<NuGetPublishSkipDuplicate Condition="'$(NuGetPublishCmd)' != 'push' OR '$(NuGetPublishSkipDuplicate)' != 'true'"></NuGetPublishSkipDuplicate>
+	</PropertyGroup>
+	<Target Name="PublishPack" AfterTargets="Pack">
+		<Warning Text="Skipping NuGet publish, NuGetPublishLocation path does not exists." Condition="'$(NuGetPublishLocation.SubString(0, 4))' != 'http' AND !Exists('$(NuGetPublishLocation)')" />
+		<DownloadFile Condition="!Exists('$(NuGetPublishPath)nuget.exe') AND '$(NuGetPublishLocation)' != ''" SourceUrl="https://dist.nuget.org/win-x86-commandline/v$(NuGetPublishVersion)/nuget.exe" DestinationFolder="$(NuGetPublishPath)" />
+		<Exec Command="&quot;$(NuGetPublishPath)nuget.exe&quot; $(NuGetPublishCmd) $(NuGetPublishSkipDuplicate) &quot;$(PackageOutputAbsolutePath)$(PackageId).$(PackageVersion).nupkg&quot; -Source &quot;$(NuGetPublishLocation.TrimEnd('\'))&quot;" Condition="'$(NuGetPublishLocation)' != ''" />
+		<Warning Text="Skipping NuGet publish, NuGetPublishLocation is not set in project file." Condition="'$(NuGetPublishLocation)' == ''" />
+	</Target>
 </Project>
